C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_INVERSE_METERS_PER_TESLA_2010;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_K_T_2010;
ADD_IMPORT extern const struct codata_constant_type BOHR_RADIUS_2010;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_IN_EV_K_2010;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_IN_HZ_K_2010;
ADD_IMPORT extern const struct codata_constant_type BOLTZMANN_CONSTANT_IN_INVERSE_METERS_PER_KELVIN_2010;
ADD_IMPORT extern const struct codata_constant_type CHARACTERISTIC_IMPEDANCE_OF_VACUUM_2010;
ADD_IMPORT extern const struct codata_constant_type CLASSICAL_ELECTRON_RADIUS_2010;
ADD_IMPORT extern const struct codata_constant_type COMPTON_WAVELENGTH_2010;
ADD_IMPORT extern const struct codata_constant_type COMPTON_WAVELENGTH_OVER_2_PI_2010;
ADD_IMPORT extern const struct codata_constant_type CONDUCTANCE_QUANTUM_2010;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type CU_X_UNIT_2010;